# universal-setup

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  unisetup.txt
.github/workflows/: ci.yml
apps/: README.md
apps/appkit/: README.md
apps/cli/: README.md  usk_live_acceptance.cpp
apps/daemon/: README.md
apps/gtk/: README.md
apps/gui/: README.md
apps/gui/win32/: README.md
apps/qt/: README.md
apps/tui/: README.md
apps/winforms/: README.md
archive/prototypes/: README.md
cmake/: README.md
content/: README.md
content/policy/: README.md
content/templates/: README.md
contracts/schema/audit/: audit_event.v1.schema.json
contracts/schema/common/: result.v1.schema.json
contracts/schema/install/: install_manifest.v1.schema.json
contracts/schema/package/: package_manifest.v1.schema.json
contracts/schema/setup/: README.md  archive_inspect_request.v1.schema.json  archive_inspection.v1.schema.json  audit_event.v1.schema.json  audit_log.v1.schema.json  install_local_apply_request.v1.schema.json  install_local_plan_request.v1.schema.json  install_plan.v1.schema.json  installed_inspect_request.v1.schema.json  installed_state.v1.schema.json  installed_verify_request.v1.schema.json  live_target_evidence_capture_request.v1.schema.json  live_target_evidence_packet.v1.schema.json  m2_live_acceptance_summary.v1.schema.json  move_apply_request.v1.schema.json  move_plan_request.v1.schema.json  move_report.v1.schema.json  operation_plan.v1.schema.json  operator_verdict_record_request.v1.schema.json  ownership.v1.schema.json  ownership_manifest.v1.schema.json  package_verify_report.v1.schema.json  package_verify_request.v1.schema.json  policy.v1.schema.json  recipe.v1.schema.json  recovery_apply_request.v1.schema.json  recovery_inspect_request.v1.schema.json  recovery_plan.v1.schema.json  recovery_plan_request.v1.schema.json  recovery_report.v1.schema.json  refusal.v1.schema.json  repair_apply_request.v1.schema.json  repair_plan.v1.schema.json  repair_plan_request.v1.schema.json  repair_report.v1.schema.json  rollback.v1.schema.json  setup_manifest.v1.schema.json  source.v1.schema.json  target_evidence.v1.schema.json  target_policy.v1.schema.json  (+8 more)
contracts/schema/state/: installed_state.v1.schema.json
contracts/schema/transaction/: transaction_plan.v1.schema.json
docs/: README.md  roadmap.md
docs/architecture/: boundary.md  command_graph.md  data_flow.md  directory_structure.md  ecosystem_vision.md  language_and_runtime_policy.md  module_graph.md  overview.md  ownership.md  rollback_model.md  root_grammar.md  setup_contracts.md  transaction_model.md
docs/planning/: README.md  bootstrap_prompt.md
docs/platform/: compatibility_tiers.md
docs/reproducibility/: determinism.md
docs/security/: no_arbitrary_scripts.md
docs/testing/: m1_adversarial_proof.md  m2_adversarial_proof.md  m2_interruption_recovery.md  m2_live_acceptance.md
include/usk/: usk_allocator.h  usk_api.h  usk_audit.h  usk_command.h  usk_context.h  usk_error.h  usk_install.h  usk_manifest.h  usk_result.h  usk_transaction.h  usk_types.h  usk_verify.h
include/usu/: usu_abi.h  usu_api.h  usu_callbacks.h  usu_execute.h  usu_platform_caps.h  usu_platform_iface.h  usu_report.h
release/: license.v1.toml
release/packaging/: README.md
release/packaging/bsd/: README.md
release/packaging/linux/: README.md
release/packaging/macos/: README.md
release/packaging/portable/: README.md
release/packaging/windows/: README.md
runtime/base/: README.md  usk_json.cpp  usk_json.h  usk_record_io.cpp  usk_record_io.h  usk_sha256.cpp  usk_sha256.h  usk_stable_file.cpp  usk_stable_file.h
runtime/command/: README.md
runtime/diagnostics/: README.md
runtime/platform/: README.md
runtime/platform/bsd/: README.md
runtime/platform/linux/: README.md
runtime/platform/macos/: README.md
runtime/platform/posix/: README.md
runtime/platform/windows/: README.md
runtime/setup/: README.md
runtime/setup/audit/: README.md  usk_audit_repository.cpp  usk_audit_repository.h
runtime/setup/evidence/: README.md  usk_live_evidence.cpp  usk_live_evidence.h
runtime/setup/fetch/: README.md
runtime/setup/install/: README.md
runtime/setup/kernel/: README.md  usk_api.c
runtime/setup/lifecycle/: README.md  usk_lifecycle.cpp  usk_lifecycle.h  usk_public_lifecycle.cpp  usk_public_lifecycle.h
runtime/setup/manifest/: README.md
runtime/setup/ownership/: README.md
runtime/setup/package/: README.md  usk_archive_inspect.cpp  usk_archive_inspect.h  usk_archive_payload.h
runtime/setup/plan/: README.md
runtime/setup/policy/: README.md  usk_target_inspect.cpp  usk_target_inspect.h  usk_target_policy.cpp  usk_target_policy.h
runtime/setup/resolver/: README.md
runtime/setup/rollback/: README.md
runtime/setup/state/: README.md  usk_state_repository.cpp  usk_state_repository.h
runtime/setup/transaction/: README.md  usk_transaction_session.cpp  usk_transaction_session.h
runtime/setup/verify/: README.md  usk_package_verify.cpp  usk_package_verify.h
tests/: test_ci_native_proof.py  test_language_runtime_policy.py  test_license_policy.py  test_setup_contracts.py  test_structure_policy.py
tests/cmake/: usk_live_acceptance_smoke.cmake
tests/fixtures/setup/: m2-adversarial-coverage.v1.json
tests/fixtures/setup/state-v1/: README.md  audit-event-0.json  installed.json  ownership.json
tests/fuzz/: usk_json_fuzz.cpp
tests/native/: usk_adversarial_lifecycle_smoke.cpp  usk_archive_inspect_smoke.cpp  usk_command_graph_smoke.c  usk_interruption_recovery_smoke.cpp  usk_json_smoke.cpp  usk_lifecycle_smoke.cpp  usk_live_evidence_smoke.cpp  usk_package_verify_smoke.cpp  usk_public_lifecycle_smoke.cpp  usk_sha256_smoke.cpp  usk_stable_file_smoke.cpp  usk_state_repository_smoke.cpp  usk_target_inspect_smoke.cpp  usk_target_policy_smoke.cpp  usk_transaction_session_smoke.cpp
tools/: adversarial_coverage_check.py  language_runtime_policy_check.py  license_policy_check.py  strict_check.py  structure_policy_check.py
